fixed ghost line bug on tablets

--- a/styles.css
+++ b/styles.css
@@ -230,8 +230,8 @@ body {
 	background-image: url(images/thumb_shadow.jpg);
 	width: 100%;
 	height: 9%;
-	background-position: 0% 150%;
-	background-repeat: no-repeat;
+	background-position: 0% 0%;
+	background-repeat: no-repeat !important;
 	background-size: 100%;
 }
 .head {
